--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1>Deep Zoom Images</h1>
   <p>Here are your Deep Zoom Images:</p>
   <ul>
-    <li><a href="before01.dzi_files">View Before Image</a></li>
-    <li><a href="after01.dzi_files">View After Image</a></li>
+    <li><a href="before01.dzi">View Before Image</a></li>
+    <li><a href="after01.dzi">View After Image</a></li>
   </ul>
 </body>
 </html>
