--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deep Zoom Images</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deep Zoom Test</title>
+    <script src="https://openseadragon.github.io/openseadragon/openseadragon.min.js"></script>
+    <style>
+        #openseadragon {
+            width: 100%;
+            height: 600px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Deep Zoom Images</h1>
-  <p>Here are your Deep Zoom Images:</p>
-  <ul>
-    <li><a href="before01.dzi">View Before Image</a></li>
-    <li><a href="after01.dzi">View After Image</a></li>
-  </ul>
+    <h1>Test OpenSeadragon Viewer</h1>
+    <div id="openseadragon"></div>
+
+    <script>
+        var viewer = OpenSeadragon({
+            id: "openseadragon",
+            prefixUrl: "https://openseadragon.github.io/openseadragon/images/",
+            tileSources: "https://hallettvisual.github.io/deep-zoom-images/before01.dzi",
+            visibilityRatio: 1.0,
+            constrainDuringPan: true
+        });
+    </script>
 </body>
 </html>
